logs/dag_id=Weather_DAG_V2.3/run_id=scheduled__2024-02-09T003600+0000/task_id=data_to_db/attempt=2.log
[2024-02-09T11:48:46.930+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Weather_DAG_V2.3.data_to_db scheduled__2024-02-09T00:36:00+00:00 [queued]>
[2024-02-09T11:48:47.078+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Weather_DAG_V2.3.data_to_db scheduled__2024-02-09T00:36:00+00:00 [queued]>
[2024-02-09T11:48:47.093+0000] {taskinstance.py:2170} INFO - Starting attempt 2 of 2
[2024-02-09T11:48:47.174+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): data_to_db> on 2024-02-09 00:36:00+00:00
[2024-02-09T11:48:47.199+0000] {standard_task_runner.py:60} INFO - Started process 10088 to run task
[2024-02-09T11:48:47.274+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Weather_DAG_V2.3', 'data_to_db', 'scheduled__2024-02-09T00:36:00+00:00', '--job-id', '3308', '--raw', '--subdir', 'DAGS_FOLDER/Weather_dag.py', '--cfg-path', '/tmp/tmpbnku__16']
[2024-02-09T11:48:47.287+0000] {standard_task_runner.py:88} INFO - Job 3308: Subtask data_to_db
[2024-02-09T11:48:47.455+0000] {task_command.py:423} INFO - Running <TaskInstance: Weather_DAG_V2.3.data_to_db scheduled__2024-02-09T00:36:00+00:00 [running]> on host 06573eafe810
[2024-02-09T11:48:47.736+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Weather_DAG_V2.3' AIRFLOW_CTX_TASK_ID='data_to_db' AIRFLOW_CTX_EXECUTION_DATE='2024-02-09T00:36:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-02-09T00:36:00+00:00'
[2024-02-09T11:48:47.852+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-09T11:48:47.867+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/Weather_dag.py", line 72, in csv_db
    hook.insert_rows(table='weather_tab', rows=CSV_DATA)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 541, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 1: ... weather_tab  VALUES ('U','n','n','a','m','e','d',':',' ','0...
                                                             ^

[2024-02-09T11:48:47.884+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=Weather_DAG_V2.3, task_id=data_to_db, execution_date=20240209T003600, start_date=20240209T114846, end_date=20240209T114847
[2024-02-09T11:48:47.918+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 3308 for task data_to_db (INSERT has more expressions than target columns
LINE 1: ... weather_tab  VALUES ('U','n','n','a','m','e','d',':',' ','0...
                                                             ^
; 10088)
[2024-02-09T11:48:47.959+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-09T11:48:48.075+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
